--- a/SistemaDeVentas1/nbproject/project.properties
+++ b/SistemaDeVentas1/nbproject/project.properties
@@ -34,11 +34,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SistemaDeVentas1
 excludes=
 file.reference.mysql-connector-java-5.1.46-bin.jar=src\\conector\\mysql-connector-java-5.1.46-bin.jar
+file.reference.mysql-connector-java-8.0.19.jar=C:\\Users\\maygr\\Desktop\\Curso de programacion 2\\Programacion\\librerias\\librerias\\mysql-connector-java-8.0.19.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.46-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.46-bin.jar}:\
+    ${file.reference.mysql-connector-java-8.0.19.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
